--- a/configurator/Gemfile
+++ b/configurator/Gemfile
@@ -16,6 +16,7 @@ gem 'uglifier', '>= 1.3.0'
 gem 'jquery-rails'
 gem 'jquery-turbolinks'
 gem 'turbolinks', '~> 5'
+gem 'active_link_to'
 
 group :development, :test do
   gem 'binding_of_caller'
