--- a/configurator/Gemfile
+++ b/configurator/Gemfile
@@ -18,6 +18,7 @@ gem 'jquery-turbolinks'
 gem 'turbolinks', '~> 5'
 gem 'active_link_to'
 gem 'simple_form'
+gem 'ace-rails-ap'
 
 group :development, :test do
   gem 'binding_of_caller'
