--- a/examples/api_gateway_proxy/package.json
+++ b/examples/api_gateway_proxy/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "hello_world",
+  "name": "something",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "transpile": "babel --presets es2015 src --out-dir bin"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "aws-serverless-express": "^1.1.4",
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
+    "express": "~4.13.4",
+    "jade": "~1.11.0",
+    "massive": "^2.5.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0",
+    "yamljs": "^0.2.8"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0"
-  },
-  "dependencies": {
-    "aws-serverless-express": "^2.1.3",
-    "body-parser": "^1.17.0",
-    "cors": "^2.8.1",
-    "express": "^4.15.0"
   }
 }
